# xosms

./: .gitignore  .npmignore  CONTRIBUTING.md  Cargo.toml  README.md  binding.gyp  index.d.ts  index.js  package.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CI.yml  build-test.yml  package-publish.yml
.yarn/versions/: 234eaa5e.yml
__test__/: mediaplayer.spec.mjs  mediaplayerthumbnail.spec.mjs
lib/: binding.ts
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: build.rs  lib.rs  xosms.cpp  xosms.h
src/linux/: mod.rs
src/linux/dbus/: mediaplayer2.rs  mediaplayer2_player.rs  mod.rs  session.rs
src/media_service/: mod.rs  service_trait.rs  unknown.rs  unsupported.rs  windows.rs
src/media_service/linux/: media_player.rs  mod.rs
src/media_service/macos/: bindings.rs  mod.rs
src/media_service/macos/xosms_swift_bridge/: Package.swift
src/media_service/macos/xosms_swift_bridge/Sources/xosms_swift_bridge/: xosms_swift_bridge.swift
src/unsupported/: mod.rs
src/win/: media_service.cpp  media_service.h  utils.cpp  utils.h
src/windows/: mod.rs
test/: test_binding.js
tests/: smoke.js
