[package]
name = "xosms"
version = "0.3.0"
edition = "2018"
exclude = ["build/xosms-native.node"]
build = "src/build.rs"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
block = "0.1.6"
fruity = { version = "0.3.0", features = ["foundation"] }

[target.'cfg(target_os = "macos")'.build-dependencies]
bindgen = "0.59.1"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9.5"
dbus-crossroads = "0.5.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.37.0", features = ["Foundation", "Media", "Media_Playback", "Storage", "Storage_Streams"] }

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6", "channel-api"]
