[package]
edition = "2021"
name = "xosms"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi9", "tokio_rt"] }
napi-derive = "2.12.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.54.0", features = ["Foundation", "Media", "Media_Playback", "Storage", "Storage_Streams"] }
dashmap = "5.5.3"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
